--- a/src/app/loggin/loggin.page.html
+++ b/src/app/loggin/loggin.page.html
@@ -11,25 +11,20 @@
     <ion-card-content>
       <ion-item>
 
-        <ion-label>Correo:</ion-label>
-        <ion-input placeholder="ejemplo@ejemplo.com" [(ngModel)]="username"></ion-input>
 
-      </ion-item>
+        <ion-input placeholder="Correo electronico" [(ngModel)]="username"></ion-input>
 
-      <ion-item>
-
-        <ion-label>Contraseña:</ion-label>
         <ion-input placeholder="contraseña" type="password" [(ngModel)]="password"></ion-input>
 
+        <ion-label><a href="#">¿Olvidaste la contraseña?</a></ion-label>
+
+        <ion-button (click)="iniciarSesion()">Ingresar</ion-button>
+
+        <ion-button >Crear cuenta</ion-button>
       </ion-item>
-      <ion-item>
-        <ion-button color="success" expand="full" fill="outline" (click)="iniciarSesion()">Ingresar</ion-button>
-      </ion-item>
+
     </ion-card-content>
 
   </ion-card>
-  <ion-item>
-    <ion-label>¿No tienes cuenta?</ion-label><a href="#">Registrate gratis</a>
-  </ion-item>
 
 </ion-content>
