--- a/src/app/loggin/loggin.page.scss
+++ b/src/app/loggin/loggin.page.scss
@@ -1,5 +1,17 @@
+h2{
+  text-align: center;
+}
 ion-card{
-  background: rgb(2,0,36);
-  background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(122,166,207,1) 0%, rgba(0,0,0,1) 100%);
+  --background: rgb(2,0,36);
+  --background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(122,166,207,1) 0%, rgba(0,0,0,1) 100%);
   --color:black;
+}
+ion-content{
+  --background: url(../../assets/img/bg.png) 0 0/100% 100% no-repeat;
+}
+ion-input{
+  --background:rgba(0,0,0,0.0);
+}
+ion-item{
+  --background:rgba(0,0,0,0.0);
 }
