--- a/src/app/loggin/loggin.page.html
+++ b/src/app/loggin/loggin.page.html
@@ -9,19 +9,40 @@
     </ion-card-header>
 
     <ion-card-content>
-      <ion-item>
 
+      <ion-grid>
+        <ion-row class="ion-align-items-center">
+          <ion-col>
+            <ion-input placeholder="Correo electronico" type="email" [(ngModel)]="username"></ion-input>
+          </ion-col>
+        </ion-row>
 
-        <ion-input placeholder="Correo electronico" [(ngModel)]="username"></ion-input>
+        <ion-row class="ion-align-items-center">
+          <ion-col>
+            <ion-input placeholder="Contraseña" type="password" [(ngModel)]="password"></ion-input>
+          </ion-col>
 
-        <ion-input placeholder="contraseña" type="password" [(ngModel)]="password"></ion-input>
+        </ion-row>
 
-        <ion-label><a href="#">¿Olvidaste la contraseña?</a></ion-label>
+        <ion-row class="ion-align-items-center">
+          <ion-col>
+            <ion-label><a href="#">¿Olvidaste la contraseña?</a></ion-label>
+          </ion-col>
+        </ion-row>
 
-        <ion-button (click)="iniciarSesion()">Ingresar</ion-button>
+        <ion-row class="ion-align-items-center">
+          <ion-col>
+            <ion-button (click)="iniciarSesion()">Ingresar</ion-button>
+          </ion-col>
 
-        <ion-button >Crear cuenta</ion-button>
-      </ion-item>
+        </ion-row>
+
+        <ion-row class="ion-align-items-center">
+          <ion-col>
+            <ion-button>Crear cuenta</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
 
     </ion-card-content>
 
