--- a/src/app/loggin/loggin.page.scss
+++ b/src/app/loggin/loggin.page.scss
@@ -4,6 +4,11 @@ a{
 }
 h2{
   text-align: center;
+  font-size: 50px;
+}
+img{
+  width: 100%;
+
 }
 ion-button{
   --background:#69C8DC;
@@ -14,10 +19,9 @@ ion-card{
   --background: rgb(2,0,36);
   --background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(122,166,207,1) 0%, rgba(0,0,0,1) 100%);
   --color:black;
-    margin-top:30%;
-}
-ion-content{
-  --background: url(../../assets/img/bg.png) 0 0/100% 100% no-repeat;
+  border-radius: 100px;
+
+    height: 75vh;
 }
 ion-input{
   --background:white;
