--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,1 +1,48 @@
-<ion-button (click)="loggOff()">Pito</ion-button>
+
+<ion-content>
+  <ion-card-content>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+            <ion-label class="text-center"><h2>Perfil</h2></ion-label>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-input placeholder="Nombre" type="text" disabled></ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+           <ion-input placeholder="Apellido" type="text" disabled></ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-input placeholder="Edad" type="number" disabled></ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-input placeholder="Nombre usuario" type="text" disabled></ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-input placeholder="Correo electronico" type="email" disabled></ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+         <ion-input placeholder="Contraseña" type="password" disabled></ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col><ion-button (click)="goBack()">añadir</ion-button></ion-col>
+        <ion-button (click)="loggOff()">log out </ion-button>
+      </ion-row>
+    </ion-grid>
+
+
+  </ion-card-content>
+</ion-content>
