--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,15 +2,15 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon src="../../assets/img/7.svg" style="height: 100vh;"></ion-icon>
+      <ion-icon src="../../assets/img/7.svg" style="height: 75vh; width: 75vw;"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon src="../../assets/img/35.svg"></ion-icon>
+      <ion-icon src="../../assets/img/35.svg" style="height: 75vh; width: 75vw;"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon src="../../assets/img/fb.svg"></ion-icon>
+      <ion-icon src="../../assets/img/fb.svg" style="height: 75vh; width: 75vw;"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
 
