--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,10 @@
 <div class="user">
-  <img [src]="tImage">
+  <button>
+    <img [src]="tImage">
+  </button>
   <p>Foto de perfil</p>
   <label >{{tName}}</label>
   <label >{{nAge}}</label>
   <label >{{tNickName}}</label>
+  <label >{{tEmail}}</label>
 </div>
