--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -2,3 +2,8 @@ ion-button{
   height: 25%;
   width: 25%;
 }
+
+ion-content{
+  --background: rgb(2,0,36);
+  --background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(110,0,255,1) 0%, rgba(222,0,255,1) 76%);
+}
