--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -9,6 +9,13 @@
       </ion-row>
       <ion-row>
         <ion-col>
+          <button (click)="troleo()" class="troleo" ion-button icon-only  style="border-radius: 50%; height: 150; width: 150;">
+            <ion-icon name="add-outline"  ></ion-icon>
+            </button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
           <ion-label placeholder="Nombre" type="text" tName disabled>{{tName}}</ion-label>
         </ion-col>
       </ion-row>
@@ -28,7 +35,8 @@
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-button (click)="loggOff()">log out </ion-button>
+        <ion-button class="centrado" expand="full" fill="outline" color="warning" (click)="loggOff()">log out </ion-button>
+
       </ion-row>
     </ion-grid>
 
